testsuite/tests/grammar/invalid_abstract_fields/free-standing-null-field.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- ExampleHolder()
}

@abstract class FooNode implements Node[FooNode] {
}

class ExampleHolder : FooNode {
    @null_field @parse_field f: FooNode
}

class Example : FooNode implements TokenNode {
}
